--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="container">
             <nav class="nav">
                 <a href="#" class="logo link">
-                    <span class="logo__web">Web</span>Studio
+                    <span class="logo__web">Web jk</span>Studio
                 </a>
                 <ul class="nav__list list">
                     <li class="nav__item">
