--- a/index.html
+++ b/index.html
@@ -83,12 +83,12 @@
                 </li>
             </ul>
 
-            <ul class="mobile-menu__contact list">
-                <li class="mobile-menu__contact-item">
-                    <a href="tel:+380961111111" class="contact-item__tel link">+38 098 111 11 11</a>
+            <ul class="contact-mobile list">
+                <li class="contact-mobile__item">
+                    <a href="tel:+380961111111" class="contact-mobile__tel link">+38 098 111 11 11</a>
                 </li>
-                <li class="mobile-menu__contact-item">
-                    <a href="mailto:info@devstudio.com" class="contact-item__mailto link"
+                <li class="contact-mobile__item">
+                    <a href="mailto:info@devstudio.com" class="contact-mobile__mailto link"
                         lang="en">info@devstudio.com</a>
                 </li>
             </ul>
@@ -560,6 +560,7 @@
         </div>
     </div> -->
 
+    <script src="./js/modal-menu.js"></script>
     <script src="./js/modal.js"></script>
 
 </body>
