--- a/index.html
+++ b/index.html
@@ -111,13 +111,13 @@
 
     <main>
         <!--HERO-->
-        <!-- <section class="hero">
+        <section class="hero">
             <h1 class="hero__title">Эффективное решение для вашего бизнеса</h1>
             <button class="btn btn__hero" type="button" data-modal-open>Заказать услугу</button>
-        </section> -->
+        </section>
 
         <!--FEATURES-->
-        <!-- <section class="features">
+        <section class="features">
             <div class="container">
                 <h2 class="visually-hidden">Особенности</h2>
                 <ul class="features__list list">
@@ -172,10 +172,10 @@
 
                 </ul>
             </div>
-        </section> -->
+        </section>
 
         <!--ABOUT-->
-        <!-- <section class="about">
+        <section class="about">
             <div class="container">
                 <h2 class="about__title">Чем мы занимаемся</h2>
                 <ul class="about__list list">
@@ -197,16 +197,25 @@
 
                 </ul>
             </div>
-        </section> -->
+        </section>
 
         <!--OUR-TEAM-->
-        <!-- <section class="team">
+        <section class="team">
             <div class="container">
                 <h2 class="team__title"> Наша команда</h2>
                 <ul class="team__list list">
 
                     <li class="team__item">
-                        <img src="./images/our-team/our-team-1.jpg" alt="Игорь Демьяненко" width="270" height="260">
+                        <picture>
+                            <source srcset="./images/our-team/team-1-mobile.jpg, ./images/our-team/team-1-mobile@2x.jpg"
+                                media="(max-width: 767px)" width="450" height="460">
+                            <source srcset="./images/our-team/team-1-tablet.jpg, ./image/our-team/team-1-tablet@2x.jpg"
+                                media="(max-width: 1199px)" width="355" height="375">
+                            <source
+                                srcset="./images/our-team/team-1-desktop.jpg, ./images/our-team/team-1-descktop@2x.jpg"
+                                media="(min-width: 1200px)" width="270" height="260">
+                            <img src="./images/our-team/our-team-1.jpg" alt="Игорь Демьяненко">
+                        </picture>
 
                         <div class="team__card">
                             <h3 class="team__name">Игорь Демьяненко</h3>
@@ -246,7 +255,16 @@
                     </li>
 
                     <li class="team__item">
-                        <img src="./images/our-team/our-team-2.jpg" alt="Ольга Репина" width="270" height="260">
+                        <picture>
+                            <source srcset="./images/our-team/team-2-mobile.jpg, ./images/our-team/team-2-mobile@2x.jpg"
+                                media="(min-width: 480px)" width="450" height="460">
+                            <source srcset="./images/our-team/team-2-tablet.jpg, ./image/our-team/team-2-tablet@2x.jpg"
+                                media="(min-width: 768px)" width="355" height="375">
+                            <source
+                                srcset="./images/our-team/team-2-desktop.jpg, ./images/our-team/team-2-descktop@2x.jpg"
+                                media="(min-width: 1200px)" width="270" height="260">
+                            <img src="./images/our-team/our-team-2.jpg" alt="Игорь Демьяненко">
+                        </picture>
                         <div class="team__card">
 
                             <h3 class="team__name">Ольга Репина</h3>
@@ -368,7 +386,7 @@
                     </li>
                 </ul>
             </div>
-        </section> -->
+        </section>
 
         <!--CLIENT-->
         <!-- <section class="client">
