--- a/index.html
+++ b/index.html
@@ -207,12 +207,14 @@
 
                     <li class="team__item">
                         <picture>
-                            <source srcset="./images/our-team/team-1-mobile.jpg, ./images/our-team/team-1-mobile@2x.jpg"
-                                media="(max-width: 767px)" width="450" height="460">
-                            <source srcset="./images/our-team/team-1-tablet.jpg, ./image/our-team/team-1-tablet@2x.jpg"
-                                media="(max-width: 1199px)" width="355" height="375">
                             <source
-                                srcset="./images/our-team/team-1-desktop.jpg, ./images/our-team/team-1-descktop@2x.jpg"
+                                srcset="./images/our-team/team-1-mobile.jpg 1x, ./images/our-team/team-1-mobile@2x.jpg 2x"
+                                media="(max-width: 767px)" width="450" height="460">
+                            <source
+                                srcset="./images/our-team/team-1-tablet.jpg 1x, ./image/our-team/team-1-tablet@2x.jpg 2x"
+                                media="(max-width: 1199px)" width="354" height="375">
+                            <source
+                                srcset="./images/our-team/team-1-desktop.jpg 1x, ./images/our-team/team-1-descktop@2x.jpg 2x"
                                 media="(min-width: 1200px)" width="270" height="260">
                             <img src="./images/our-team/our-team-1.jpg" alt="Игорь Демьяненко">
                         </picture>
@@ -256,14 +258,16 @@
 
                     <li class="team__item">
                         <picture>
-                            <source srcset="./images/our-team/team-2-mobile.jpg, ./images/our-team/team-2-mobile@2x.jpg"
-                                media="(min-width: 480px)" width="450" height="460">
-                            <source srcset="./images/our-team/team-2-tablet.jpg, ./image/our-team/team-2-tablet@2x.jpg"
-                                media="(min-width: 768px)" width="355" height="375">
                             <source
-                                srcset="./images/our-team/team-2-desktop.jpg, ./images/our-team/team-2-descktop@2x.jpg"
+                                srcset="./images/our-team/team-2-mobile.jpg 1x, ./images/our-team/team-2-mobile@2x.jpg 2x"
+                                media="(max-width: 767px)" width="450" height="460">
+                            <source
+                                srcset="./images/our-team/team-2-tablet.jpg 1x, ./image/our-team/team-2-tablet@2x.jpg 2x"
+                                media="(max-width: 1199px)" width="354" height="375">
+                            <source
+                                srcset="./images/our-team/team-2-desktop.jpg 1x, ./images/our-team/team-2-descktop@2x.jpg 2x"
                                 media="(min-width: 1200px)" width="270" height="260">
-                            <img src="./images/our-team/our-team-2.jpg" alt="Игорь Демьяненко">
+                            <img src="./images/our-team/our-team-2.jpg" alt="Ольга Репина">
                         </picture>
                         <div class="team__card">
 
@@ -304,7 +308,18 @@
                     </li>
 
                     <li class="team__item">
-                        <img src="./images/our-team/our-team-3.jpg" alt="Николай Тарасов" width="270" height="260">
+                        <picture>
+                            <source
+                                srcset="./images/our-team/team-3-mobile.jpg 1x, ./images/our-team/team-3-mobile@2x.jpg 2x"
+                                media="(max-width: 767px)" width="450" height="460">
+                            <source
+                                srcset="./images/our-team/team-3-tablet.jpg 1x, ./image/our-team/team-3-tablet@2x.jpg 2x"
+                                media="(max-width: 1199px)" width="354" height="375">
+                            <source
+                                srcset="./images/our-team/team-3-desktop.jpg 1x, ./images/our-team/team-3-descktop@2x.jpg 2x"
+                                media="(min-width: 1200px)" width="270" height="260">
+                            <img src="./images/our-team/our-team-3.jpg" alt="Николай Тарасов">
+                        </picture>
 
                         <div class="team__card">
 
@@ -345,7 +360,18 @@
                     </li>
 
                     <li class="team__item">
-                        <img src="./images/our-team/our-team-4.jpg" alt="Михаил Ермаков" width="270" height="260">
+                        <picture>
+                            <source
+                                srcset="./images/our-team/team-4-mobile.jpg 1x, ./images/our-team/team-4-mobile@2x.jpg 2x"
+                                media="(max-width: 767px)" width="450" height="460">
+                            <source
+                                srcset="./images/our-team/team-4-tablet.jpg 1x, ./image/our-team/team-4-tablet@2x.jpg 2x"
+                                media="(max-width: 1199px)" height="375">
+                            <source
+                                srcset="./images/our-team/team-4-desktop.jpg 1x, ./images/our-team/team-4-descktop@2x.jpg 2x"
+                                media="(min-width: 1200px)" width="270" height="260">
+                            <img src="./images/our-team/our-team-4.jpg" alt="Михаил Ермаков">
+                        </picture>
 
                         <div class="team__card">
 
