--- a/index.html
+++ b/index.html
@@ -211,8 +211,8 @@
                                 srcset="./images/our-team/team-1-mobile.jpg 1x, ./images/our-team/team-1-mobile@2x.jpg 2x"
                                 media="(max-width: 767px)" width="450" height="460">
                             <source
-                                srcset="./images/our-team/team-1-tablet.jpg 1x, ./image/our-team/team-1-tablet@2x.jpg 2x"
-                                media="(max-width: 1199px)" width="354" height="375">
+                                srcset="./images/our-team/team-1-tablet.jpg 1x, ./images/our-team/team-1-tablet@2x.jpg 2x"
+                                media="(max-width: 1199px)" width="339" height="375">
                             <source
                                 srcset="./images/our-team/team-1-desktop.jpg 1x, ./images/our-team/team-1-descktop@2x.jpg 2x"
                                 media="(min-width: 1200px)" width="270" height="260">
@@ -262,8 +262,8 @@
                                 srcset="./images/our-team/team-2-mobile.jpg 1x, ./images/our-team/team-2-mobile@2x.jpg 2x"
                                 media="(max-width: 767px)" width="450" height="460">
                             <source
-                                srcset="./images/our-team/team-2-tablet.jpg 1x, ./image/our-team/team-2-tablet@2x.jpg 2x"
-                                media="(max-width: 1199px)" width="354" height="375">
+                                srcset="./images/our-team/team-2-tablet.jpg 1x, ./images/our-team/team-2-tablet@2x.jpg 2x"
+                                media="(max-width: 1199px)" width="339" height="375">
                             <source
                                 srcset="./images/our-team/team-2-desktop.jpg 1x, ./images/our-team/team-2-descktop@2x.jpg 2x"
                                 media="(min-width: 1200px)" width="270" height="260">
@@ -313,8 +313,8 @@
                                 srcset="./images/our-team/team-3-mobile.jpg 1x, ./images/our-team/team-3-mobile@2x.jpg 2x"
                                 media="(max-width: 767px)" width="450" height="460">
                             <source
-                                srcset="./images/our-team/team-3-tablet.jpg 1x, ./image/our-team/team-3-tablet@2x.jpg 2x"
-                                media="(max-width: 1199px)" width="354" height="375">
+                                srcset="./images/our-team/team-3-tablet.jpg 1x, ./images/our-team/team-3-tablet@2x.jpg 2x"
+                                media="(max-width: 1199px)" width="339" height="375">
                             <source
                                 srcset="./images/our-team/team-3-desktop.jpg 1x, ./images/our-team/team-3-descktop@2x.jpg 2x"
                                 media="(min-width: 1200px)" width="270" height="260">
@@ -365,8 +365,8 @@
                                 srcset="./images/our-team/team-4-mobile.jpg 1x, ./images/our-team/team-4-mobile@2x.jpg 2x"
                                 media="(max-width: 767px)" width="450" height="460">
                             <source
-                                srcset="./images/our-team/team-4-tablet.jpg 1x, ./image/our-team/team-4-tablet@2x.jpg 2x"
-                                media="(max-width: 1199px)" height="375">
+                                srcset="./images/our-team/team-4-tablet.jpg 1x, ./images/our-team/team-4-tablet@2x.jpg 2x"
+                                media="(max-width: 1199px)" width="339" height="375">
                             <source
                                 srcset="./images/our-team/team-4-desktop.jpg 1x, ./images/our-team/team-4-descktop@2x.jpg 2x"
                                 media="(min-width: 1200px)" width="270" height="260">
@@ -415,7 +415,7 @@
         </section>
 
         <!--CLIENT-->
-        <!-- <section class="client">
+        <section class="client">
             <div class="container">
                 <h2 class="client__title">Постоянные клиенты</h2>
                 <ul class="client__list list">
@@ -471,81 +471,82 @@
 
                 </ul>
             </div>
-        </section> -->
+        </section>
 
     </main>
 
-    <!-- <footer class="footer">
+    <footer class="footer">
         <div class="container">
             <div class="footer__address">
                 <a href="#" class="logo link logo__footer">
                     <span class="logo__web">Web</span>Studio
                 </a>
-                
-    <address class="address">
-        <ul class="address__list list">
-            <li class="address__item">
-                <a class="address__link link" href="https://goo.gl/maps/dwvxSEG967mqyH358" target="_blank"
-                    rel="noopener noreferrer">г.Киев, пр-т Леси Украинки, 26</a>
-            </li>
-            <li class="address__item">
-                <a class="contact__link link" href="mailto:info@devstudio.com" lang="en">info@devstudio.com</a>
-            </li>
-            <li class="address__item">
-                <a class="contact__link link" href="tel:+380961111111">+38 096 111 11 11</a>
-            </li>
-        </ul>
-    </address>
-    </div>
 
-    <div class="fotter__join">
-        <p class="join__title">Присоединяйтесь</p>
-        <ul class="social-list list">
-            <li class="social-list__item social-list__item--footer">
-                <a href="" class="social-list__link link social-list__link--footer">
-                    <svg class="social-list__icon social-list__icon--footer">
-                        <use href="./images/icons.svg#icon-instagram2"></use>
-                    </svg>
-                </a>
-            </li>
-            <li class="social-list__item social-list__item--footer">
-                <a href="" class="social-list__link link social-list__link--footer">
-                    <svg class="social-list__icon social-list__icon--footer">
-                        <use href="./images/icons.svg#icon-twitter1"></use>
-                    </svg>
-                </a>
-            </li>
-            <li class="social-list__item social-list__item--footer">
-                <a href="" class="social-list__link link social-list__link--footer">
-                    <svg class="social-list__icon social-list__icon--footer">
-                        <use href="./images/icons.svg#icon-facebook1"></use>
-                    </svg>
-                </a>
-            </li>
-            <li class="social-list__item social-list__item--footer">
-                <a href="" class="social-list__link link social-list__link--footer">
-                    <svg class="social-list__icon social-list__icon--footer">
-                        <use href="./images/icons.svg#icon-linkedin1"></use>
-                    </svg>
-                </a>
-            </li>
-        </ul>
-    </div>
+                <address class="address">
+                    <ul class="address__list list">
+                        <li class="address__item">
+                            <a class="address__link link" href="https://goo.gl/maps/dwvxSEG967mqyH358" target="_blank"
+                                rel="noopener noreferrer">г.Киев, пр-т Леси Украинки, 26</a>
+                        </li>
+                        <li class="address__item">
+                            <a class="contact__link link" href="mailto:info@devstudio.com"
+                                lang="en">info@devstudio.com</a>
+                        </li>
+                        <li class="address__item">
+                            <a class="contact__link link" href="tel:+380961111111">+38 096 111 11 11</a>
+                        </li>
+                    </ul>
+                </address>
+            </div>
 
-    <div class="subscribe">
-        <p class="subscribe__title">Подпишитесь на рассылку</p>
-        <form action="#" class="subscribe__footer" autocomplete="off">
-            <input class="subscribe__input" name="email" type="mail" placeholder="E-mail">
-            <button class="btn" type="submit">
-                Подписаться
-                <svg class="subscribe__send" width="24" height="24">
-                    <use href="./images/icons.svg#icon-send"></use>
-                </svg>
-            </button>
-        </form>
-    </div>
-    </div>
-    </footer> -->
+            <div class="fotter__join">
+                <p class="join__title">Присоединяйтесь</p>
+                <ul class="social-list list">
+                    <li class="social-list__item social-list__item--footer">
+                        <a href="" class="social-list__link link social-list__link--footer">
+                            <svg class="social-list__icon social-list__icon--footer">
+                                <use href="./images/icons.svg#icon-instagram2"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="social-list__item social-list__item--footer">
+                        <a href="" class="social-list__link link social-list__link--footer">
+                            <svg class="social-list__icon social-list__icon--footer">
+                                <use href="./images/icons.svg#icon-twitter1"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="social-list__item social-list__item--footer">
+                        <a href="" class="social-list__link link social-list__link--footer">
+                            <svg class="social-list__icon social-list__icon--footer">
+                                <use href="./images/icons.svg#icon-facebook1"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="social-list__item social-list__item--footer">
+                        <a href="" class="social-list__link link social-list__link--footer">
+                            <svg class="social-list__icon social-list__icon--footer">
+                                <use href="./images/icons.svg#icon-linkedin1"></use>
+                            </svg>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+
+            <div class="subscribe">
+                <p class="subscribe__title">Подпишитесь на рассылку</p>
+                <form action="#" class="subscribe__footer" autocomplete="off">
+                    <input class="subscribe__input" name="email" type="mail" placeholder="E-mail">
+                    <button class="btn" type="submit">
+                        Подписаться
+                        <svg class="subscribe__send" width="24" height="24">
+                            <use href="./images/icons.svg#icon-send"></use>
+                        </svg>
+                    </button>
+                </form>
+            </div>
+        </div>
+    </footer>
 
     <!-- <div class="backdrop is-hidden" data-modal>
         <div class="modal">
