--- a/index.html
+++ b/index.html
@@ -477,73 +477,75 @@
 
     <footer class="footer">
         <div class="container">
-            <div class="footer__address">
-                <a href="#" class="logo link logo__footer">
-                    <span class="logo__web">Web</span>Studio
-                </a>
+            <div class="footer__content">
+                <div class="footer__address">
+                    <a href="#" class="logo link logo__footer">
+                        <span class="logo__web">Web</span>Studio
+                    </a>
 
-                <address class="address">
-                    <ul class="address__list list">
-                        <li class="address__item">
-                            <a class="address__link link" href="https://goo.gl/maps/dwvxSEG967mqyH358" target="_blank"
-                                rel="noopener noreferrer">г.Киев, пр-т Леси Украинки, 26</a>
+                    <address class="address">
+                        <ul class="address__list list">
+                            <li class="address__item">
+                                <a class="address__link link" href="https://goo.gl/maps/dwvxSEG967mqyH358"
+                                    target="_blank" rel="noopener noreferrer">г.Киев, пр-т Леси Украинки, 26</a>
+                            </li>
+                            <li class="address__item">
+                                <a class="contact__link link" href="mailto:info@devstudio.com"
+                                    lang="en">info@devstudio.com</a>
+                            </li>
+                            <li class="address__item">
+                                <a class="contact__link link" href="tel:+380961111111">+38 096 111 11 11</a>
+                            </li>
+                        </ul>
+                    </address>
+                </div>
+
+                <div class="fotter__join">
+                    <p class="join__title">Присоединяйтесь</p>
+                    <ul class="social-list list">
+                        <li class="social-list__item social-list__item--footer">
+                            <a href="" class="social-list__link link social-list__link--footer">
+                                <svg class="social-list__icon social-list__icon--footer">
+                                    <use href="./images/icons.svg#icon-instagram2"></use>
+                                </svg>
+                            </a>
                         </li>
-                        <li class="address__item">
-                            <a class="contact__link link" href="mailto:info@devstudio.com"
-                                lang="en">info@devstudio.com</a>
+                        <li class="social-list__item social-list__item--footer">
+                            <a href="" class="social-list__link link social-list__link--footer">
+                                <svg class="social-list__icon social-list__icon--footer">
+                                    <use href="./images/icons.svg#icon-twitter1"></use>
+                                </svg>
+                            </a>
                         </li>
-                        <li class="address__item">
-                            <a class="contact__link link" href="tel:+380961111111">+38 096 111 11 11</a>
+                        <li class="social-list__item social-list__item--footer">
+                            <a href="" class="social-list__link link social-list__link--footer">
+                                <svg class="social-list__icon social-list__icon--footer">
+                                    <use href="./images/icons.svg#icon-facebook1"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="social-list__item social-list__item--footer">
+                            <a href="" class="social-list__link link social-list__link--footer">
+                                <svg class="social-list__icon social-list__icon--footer">
+                                    <use href="./images/icons.svg#icon-linkedin1"></use>
+                                </svg>
+                            </a>
                         </li>
                     </ul>
-                </address>
-            </div>
+                </div>
 
-            <div class="fotter__join">
-                <p class="join__title">Присоединяйтесь</p>
-                <ul class="social-list list">
-                    <li class="social-list__item social-list__item--footer">
-                        <a href="" class="social-list__link link social-list__link--footer">
-                            <svg class="social-list__icon social-list__icon--footer">
-                                <use href="./images/icons.svg#icon-instagram2"></use>
+                <div class="footer__subscribe">
+                    <p class="subscribe__title">Подпишитесь на рассылку</p>
+                    <form action="#" class="subscribe__footer" autocomplete="off">
+                        <input class="subscribe__input" name="email" type="mail" placeholder="E-mail">
+                        <button class="btn" type="submit">
+                            Подписаться
+                            <svg class="subscribe__send" width="24" height="24">
+                                <use href="./images/icons.svg#icon-send"></use>
                             </svg>
-                        </a>
-                    </li>
-                    <li class="social-list__item social-list__item--footer">
-                        <a href="" class="social-list__link link social-list__link--footer">
-                            <svg class="social-list__icon social-list__icon--footer">
-                                <use href="./images/icons.svg#icon-twitter1"></use>
-                            </svg>
-                        </a>
-                    </li>
-                    <li class="social-list__item social-list__item--footer">
-                        <a href="" class="social-list__link link social-list__link--footer">
-                            <svg class="social-list__icon social-list__icon--footer">
-                                <use href="./images/icons.svg#icon-facebook1"></use>
-                            </svg>
-                        </a>
-                    </li>
-                    <li class="social-list__item social-list__item--footer">
-                        <a href="" class="social-list__link link social-list__link--footer">
-                            <svg class="social-list__icon social-list__icon--footer">
-                                <use href="./images/icons.svg#icon-linkedin1"></use>
-                            </svg>
-                        </a>
-                    </li>
-                </ul>
-            </div>
-
-            <div class="subscribe">
-                <p class="subscribe__title">Подпишитесь на рассылку</p>
-                <form action="#" class="subscribe__footer" autocomplete="off">
-                    <input class="subscribe__input" name="email" type="mail" placeholder="E-mail">
-                    <button class="btn" type="submit">
-                        Подписаться
-                        <svg class="subscribe__send" width="24" height="24">
-                            <use href="./images/icons.svg#icon-send"></use>
-                        </svg>
-                    </button>
-                </form>
+                        </button>
+                    </form>
+                </div>
             </div>
         </div>
     </footer>
