--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
                         <picture>
                             <source
                                 srcset="./images/our-team/team-1-mobile.jpg 1x, ./images/our-team/team-1-mobile@2x.jpg 2x"
-                                media="(max-width: 767px)" width="450" height="460">
+                                media="(max-width: 767px)">
                             <source
                                 srcset="./images/our-team/team-1-tablet.jpg 1x, ./images/our-team/team-1-tablet@2x.jpg 2x"
                                 media="(max-width: 1199px)" width="339" height="375">
