--- a/index.html
+++ b/index.html
@@ -208,15 +208,15 @@
                     <li class="team__item">
                         <picture>
                             <source
-                                srcset="./images/our-team/team-1-mobile.jpg 1x, ./images/our-team/team-1-mobile@2x.jpg 2x"
-                                media="(max-width: 767px)">
+                                srcset="./images/our-team/team-1-desktop.jpg 1x, ./images/our-team/team-1-descktop@2x.jpg 2x"
+                                media="(min-width: 1200px)">
                             <source
                                 srcset="./images/our-team/team-1-tablet.jpg 1x, ./images/our-team/team-1-tablet@2x.jpg 2x"
-                                media="(max-width: 1199px)" width="339" height="375">
+                                media="(min-width: 768px)">
                             <source
-                                srcset="./images/our-team/team-1-desktop.jpg 1x, ./images/our-team/team-1-descktop@2x.jpg 2x"
-                                media="(min-width: 1200px)" width="270" height="260">
-                            <img src="./images/our-team/our-team-1.jpg" alt="Игорь Демьяненко">
+                                srcset="./images/our-team/team-1-mobile.jpg 1x, ./images/our-team/team-1-mobile@2x.jpg 2x"
+                                media="(max-width: 767px)">
+                            <img class="team__image" src="./images/our-team/our-team-1.jpg" alt="Игорь Демьяненко">
                         </picture>
 
                         <div class="team__card">
@@ -259,15 +259,15 @@
                     <li class="team__item">
                         <picture>
                             <source
-                                srcset="./images/our-team/team-2-mobile.jpg 1x, ./images/our-team/team-2-mobile@2x.jpg 2x"
-                                media="(max-width: 767px)" width="450" height="460">
+                                srcset="./images/our-team/team-2-desktop.jpg 1x, ./images/our-team/team-2-descktop@2x.jpg 2x"
+                                media="(min-width: 1200px)">
                             <source
                                 srcset="./images/our-team/team-2-tablet.jpg 1x, ./images/our-team/team-2-tablet@2x.jpg 2x"
-                                media="(max-width: 1199px)" width="339" height="375">
+                                media="(min-width: 768px)">
                             <source
-                                srcset="./images/our-team/team-2-desktop.jpg 1x, ./images/our-team/team-2-descktop@2x.jpg 2x"
-                                media="(min-width: 1200px)" width="270" height="260">
-                            <img src="./images/our-team/our-team-2.jpg" alt="Ольга Репина">
+                                srcset="./images/our-team/team-2-mobile.jpg 1x, ./images/our-team/team-2-mobile@2x.jpg 2x"
+                                media="(max-width: 767px)">
+                            <img class="team__image" src="./images/our-team/our-team-2.jpg" alt="Ольга Репина">
                         </picture>
                         <div class="team__card">
 
@@ -310,15 +310,15 @@
                     <li class="team__item">
                         <picture>
                             <source
-                                srcset="./images/our-team/team-3-mobile.jpg 1x, ./images/our-team/team-3-mobile@2x.jpg 2x"
-                                media="(max-width: 767px)" width="450" height="460">
+                                srcset="./images/our-team/team-3-desktop.jpg 1x, ./images/our-team/team-3-descktop@2x.jpg 2x"
+                                media="(min-width: 1200px)">
                             <source
                                 srcset="./images/our-team/team-3-tablet.jpg 1x, ./images/our-team/team-3-tablet@2x.jpg 2x"
-                                media="(max-width: 1199px)" width="339" height="375">
+                                media="(min-width: 768px)">
                             <source
-                                srcset="./images/our-team/team-3-desktop.jpg 1x, ./images/our-team/team-3-descktop@2x.jpg 2x"
-                                media="(min-width: 1200px)" width="270" height="260">
-                            <img src="./images/our-team/our-team-3.jpg" alt="Николай Тарасов">
+                                srcset="./images/our-team/team-3-mobile.jpg 1x, ./images/our-team/team-3-mobile@2x.jpg 2x"
+                                media="(max-width: 767px)">
+                            <img class="team__image" src="./images/our-team/our-team-3.jpg" alt="Николай Тарасов">
                         </picture>
 
                         <div class="team__card">
@@ -362,15 +362,15 @@
                     <li class="team__item">
                         <picture>
                             <source
-                                srcset="./images/our-team/team-4-mobile.jpg 1x, ./images/our-team/team-4-mobile@2x.jpg 2x"
-                                media="(max-width: 767px)" width="450" height="460">
+                                srcset="./images/our-team/team-4-desktop.jpg 1x, ./images/our-team/team-4-descktop@2x.jpg 2x"
+                                media="(min-width: 1200px)">
                             <source
                                 srcset="./images/our-team/team-4-tablet.jpg 1x, ./images/our-team/team-4-tablet@2x.jpg 2x"
-                                media="(max-width: 1199px)" width="339" height="375">
+                                media="(min-width: 768px)">
                             <source
-                                srcset="./images/our-team/team-4-desktop.jpg 1x, ./images/our-team/team-4-descktop@2x.jpg 2x"
-                                media="(min-width: 1200px)" width="270" height="260">
-                            <img src="./images/our-team/our-team-4.jpg" alt="Михаил Ермаков">
+                                srcset="./images/our-team/team-4-mobile.jpg 1x, ./images/our-team/team-4-mobile@2x.jpg 2x"
+                                media="(max-width: 767px)">
+                            <img class="team__image" src="./images/our-team/our-team-4.jpg" alt="Михаил Ермаков">
                         </picture>
 
                         <div class="team__card">
@@ -500,7 +500,7 @@
                     </address>
                 </div>
 
-                <div class="fotter__join">
+                <div class="join">
                     <p class="join__title">Присоединяйтесь</p>
                     <ul class="social-list list">
                         <li class="social-list__item social-list__item--footer">
@@ -534,10 +534,10 @@
                     </ul>
                 </div>
 
-                <div class="footer__subscribe">
+                <div class="subscribe">
                     <p class="subscribe__title">Подпишитесь на рассылку</p>
                     <form action="#" class="subscribe__footer" autocomplete="off">
-                        <input class="subscribe__input" name="email" type="mail" placeholder="E-mail">
+                        <input class="subscribe__input" name="email" type="mail" placeholder="E-mail" required>
                         <button class="btn" type="submit">
                             Подписаться
                             <svg class="subscribe__send" width="24" height="24">
