--- a/index.html
+++ b/index.html
@@ -550,7 +550,7 @@
         </div>
     </footer>
 
-    <!-- <div class="backdrop is-hidden" data-modal>
+    <div class="backdrop is-hidden" data-modal>
         <div class="modal">
             <button class="modal-close-btn" type="button" data-modal-close>
                 <svg class="close-icon" width="18" height="18">
@@ -605,7 +605,7 @@
                 <button type="submit" class="btn btn__modal-form">Отправить</button>
             </form>
         </div>
-    </div> -->
+    </div>
 
     <script src="./js/modal-menu.js"></script>
     <script src="./js/modal.js"></script>
