--- a/index.html
+++ b/index.html
@@ -537,7 +537,7 @@
                 <div class="subscribe">
                     <p class="subscribe__title">Подпишитесь на рассылку</p>
                     <form action="#" class="subscribe__footer" autocomplete="off">
-                        <input class="subscribe__input" name="email" type="mail" placeholder="E-mail" required>
+                        <input class="subscribe__input" name="email" type="email" placeholder="E-mail" required>
                         <button class="btn" type="submit">
                             Подписаться
                             <svg class="subscribe__send" width="24" height="24">
@@ -558,12 +558,11 @@
                 </svg>
             </button>
 
-
             <form action="#" class="modal-form">
 
                 <b class="modal-form__title">Оставьте свои данные, мы вам перезвоним</b>
 
-                <ladel class="modal-form__fild" for="user-name">Имя</ladel>
+                <label class="modal-form__fild" for="user-name">Имя</label>
                 <div class="modal-form__input-wrapper">
                     <input class=" modal-form__input" type="text" name="user-name" id="user-name" required
                         minlength="2">
