--- a/portfolio.html
+++ b/portfolio.html
@@ -113,35 +113,26 @@
             <div class="container">
                 <!--FILTERS-->
                 <ul class="filters__list list">
-                    <a class="filters__link link">
-                        <li class="filters__item">
-                            <button class="btn-portfolio" type="button">Все</button>
-                        </li>
-                    </a>
 
-                    <a class="filters__link link">
-                        <li class="filters__item">
-                            <button class="btn-portfolio" type="button">Веб-сайт</button>
-                        </li>
-                    </a>
+                    <li class="filters__item">
+                        <button class="btn-portfolio" type="button">Все</button>
+                    </li>
 
-                    <a class="filters__link link">
-                        <li class="filters__item">
-                            <button class="btn-portfolio" type="button">Приложения</button>
-                        </li>
-                    </a>
+                    <li class="filters__item">
+                        <button class="btn-portfolio" type="button">Веб-сайт</button>
+                    </li>
 
-                    <a class="filters__link link">
-                        <li class="filters__item">
-                            <button class="btn-portfolio" type="button">Дизайн</button>
-                        </li>
-                    </a>
+                    <li class="filters__item">
+                        <button class="btn-portfolio" type="button">Приложения</button>
+                    </li>
 
-                    <a class="filters__link link">
-                        <li class="filters__item">
-                            <button class="btn-portfolio" type="button">Маркитинг</button>
-                        </li>
-                    </a>
+                    <li class="filters__item">
+                        <button class="btn-portfolio" type="button">Дизайн</button>
+                    </li>
+
+                    <li class="filters__item">
+                        <button class="btn-portfolio" type="button">Маркитинг</button>
+                    </li>
                 </ul>
 
                 <!--PROJECTS-->
@@ -470,7 +461,7 @@
                 <div class="subscribe">
                     <p class="subscribe__title">Подпишитесь на рассылку</p>
                     <form action="#" class="subscribe__footer" autocomplete="off">
-                        <input class="subscribe__input" name="email" type="mail" placeholder="E-mail" required>
+                        <input class="subscribe__input" name="email" type="email" placeholder="E-mail" required>
                         <button class="btn" type="submit">
                             Подписаться
                             <svg class="subscribe__send" width="24" height="24">
