--- a/portfolio.html
+++ b/portfolio.html
@@ -115,7 +115,7 @@
                 <ul class="filters__list list">
 
                     <li class="filters__item">
-                        <button class="btn-portfolio" type="button">Все</button>
+                        <button class="btn-portfolio active" type="button">Все</button>
                     </li>
 
                     <li class="filters__item">
