--- a/index.html
+++ b/index.html
@@ -83,29 +83,32 @@
                 </li>
             </ul>
 
-            <ul class="contact-mobile list">
-                <li class="contact-mobile__item">
-                    <a href="tel:+380961111111" class="contact-mobile__tel link">+38 098 111 11 11</a>
-                </li>
-                <li class="contact-mobile__item">
-                    <a href="mailto:info@devstudio.com" class="contact-mobile__mailto link"
-                        lang="en">info@devstudio.com</a>
-                </li>
-            </ul>
-            <ul class="mobile-social__list list">
-                <li class="mobile-social__item">
-                    <a href="#" class="mobile-social__link link">Instagram</a>
-                </li>
-                <li class="mobile-social__item">
-                    <a href="#" class="mobile-social__link link">Twitter</a>
-                </li>
-                <li class="mobile-social__item">
-                    <a href="#" class="mobile-social__link link">Facebook</a>
-                </li>
-                <li class="mobile-social__item">
-                    <a href="#" class="mobile-social__link link">LinkedIn</a>
-                </li>
-            </ul>
+            <div class="mobile-contact">
+
+                <ul class="contact-mobile list">
+                    <li class="contact-mobile__item">
+                        <a href="tel:+380961111111" class="contact-mobile__tel link">+38 098 111 11 11</a>
+                    </li>
+                    <li class="contact-mobile__item">
+                        <a href="mailto:info@devstudio.com" class="contact-mobile__mailto link"
+                            lang="en">info@devstudio.com</a>
+                    </li>
+                </ul>
+                <ul class="mobile-social__list list">
+                    <li class="mobile-social__item">
+                        <a href="#" class="mobile-social__link link">Instagram</a>
+                    </li>
+                    <li class="mobile-social__item">
+                        <a href="#" class="mobile-social__link link">Twitter</a>
+                    </li>
+                    <li class="mobile-social__item">
+                        <a href="#" class="mobile-social__link link">Facebook</a>
+                    </li>
+                    <li class="mobile-social__item">
+                        <a href="#" class="mobile-social__link link">LinkedIn</a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </header>
 
