--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 </li>
             </ul>
 
-            <div class="mobile-contact">
+            <div class="mobile-communication">
 
                 <ul class="contact-mobile list">
                     <li class="contact-mobile__item">
